<resources>
    <string name="app_name">FreeCourier</string>

    <string name="hint_example_email">example@mail.com</string>
    <string name="hint_enter_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="customer">Заказчик</string>
    <string name="courier_ru">Курьер</string>
    <string name="courier_en">Kourier</string>
    <string name="cancel">Отмена</string>
    <string name="ok">ОК</string>
    <string name="confirm">Принять</string>
    <string name="sign_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="log_in">Войти</string>
    <string name="email">E-mail</string>
    <string name="title_activity_main_list_ads">MainListAds</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_FIO">ФИО</string>
    <string name="hint_example_number_of_phone">Номер телефона</string>
    <string name="hint_example_date_of_birdth">Дата рождения</string>
    <string name="hint_example_number_of_driver_root">Номер вод. прав</string>
    <string name="take_to_work">Оставить заявку</string>
    <string name="title_activity_main_list_courier">MainListCourier</string>
    <string name="hint_example_number_of_card">Номер банковской карты</string>
    <string name="exit">Выйти</string>
    <string name="private_room">Личный кабинет</string>
    <string name="save_button_edit_data_private_room">Сохранить</string>
    <string name="name_courier">ФИО</string>
    <string name="about_courier">О себе (преимущества)</string>
    <string name="add_ad">Добавление объявления</string>
    <string name="name_ad">Название объявления</string>
    <string name="about_ad">Описание</string>
    <string name="from_ad">Откуда</string>
    <string name="to_ad">Куда</string>
    <string name="price_ad">Цена</string>
    <string name="ads">Объявления</string>
    <string name="couriers">Курьеры</string>
    <string name="change_rating">Выставите рейтинг</string>
    <string name="personal_ads">Отдать заказ курьеру:</string>
    <string name="send">Отправить</string>
    <string name="enter_a_message">Введите сообщение</string>
    <string name="messageFromAdmin">Сообщения администрации</string>
    <string name="all_couriers">Все курьеры</string>
    <string name="check_couriers">Выбрать курьеров</string>
    <string name="sort_on_cities">Сортировка по городам</string>
    <string name="choice_city">Выберите город:</string>
</resources>
