<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.accherniakocich.android.freecourier.Activityes.ActivitiesInNavMenu.EditDataAboutCourierAndUsersMode">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/name_courier"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/edit_text_name_courier"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="@string/hint_example_number_of_phone"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/edit_text_number_of_phone_courier"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="@string/hint_example_number_of_driver_root"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/edit_text_number_of_driver_root_courier"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="@string/hint_example_number_of_card"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/edit_text_number_of_card_courier"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="@string/about_courier"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/edit_text_name_about_courier"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="@string/hint_example_date_of_birdth"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/edit_text_date_of_birdth"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:onClick="onClick"
                    android:background="@color/color_red_50"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:id="@+id/button_edit_data_about_courier_cancel"
                    android:text="@string/cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:onClick="onClick"
                    android:background="@color/color_red_50"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:id="@+id/button_edit_data_about_courier_ok"
                    android:text="@string/ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
