<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activityes.Log_In">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="150dp"
                android:textAlignment="center"
                android:textSize="50sp"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:layout_gravity="center"
                android:textColor="@color/color_red_100"
                android:textStyle="bold"/>
            <EditText
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:padding="5dp"
                android:hint="@string/email"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/background_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:padding="5dp"
                android:hint="@string/hint_enter_password"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/background_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:fontFamily="sans-serif-condensed"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:background="@color/color_red_100"

                android:text="@string/sign_in"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"/>
            <Button
                android:fontFamily="sans-serif-condensed"
                android:layout_gravity="center"
                android:background="@color/color_gray_0"
                android:text="@string/cancel"
                android:layout_width="130dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>