<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activityes.StartActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="150dp"
                android:textAlignment="center"
                android:textSize="50sp"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/courier_en"
                android:layout_gravity="center"
                android:textColor="@color/color_red_100"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/start_activity_log_in"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:background="@color/color_gray_0"
                android:text="@string/sign_in"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"/>
            <Button
                android:id="@+id/start_activity_registration"
                android:fontFamily="sans-serif-condensed"
                android:layout_gravity="center"
                android:background="@color/color_red_100"
                android:text="@string/registration"
                android:layout_width="130dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>